# AIAgent-Youtube

./: .coveragerc  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STATUS.md  README.md  alembic.ini  celerybeat-schedule.bak  celerybeat-schedule.dir  coverage.xml  flowerconfig.py  install_ffmpeg.ps1  install_redis.ps1  install_redis_windows.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup_database.ps1  setup_local.bat  setup_youtube_oauth.py  start_all.bat  start_api.bat  start_celery_default.bat  start_celery_workers.bat  stop_all.bat  telegram_bot.py  telegram_notifier.py  test_e2e_ai_video.py  test_import.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  tests.yml
alembic/: env.py
alembic/versions/: 182ef49c0f06_add_provider_field_to_video_projects.py  2570d3ae3726_add_telegram_integration.py  3967a5f94766_sync_comments_indexes_and_cleanup_enum.py  7373379bba85_add_target_duration_to_video_projects.py  a1b2c3d4e5f6_add_self_improvement_tables.py  a7e8f2d3b4c5_add_last_completed_step.py  b7c8d9e0f1a2_add_bgm_fields.py  b9f3e4d5c6a7_add_composite_indexes.py  c2d3e4f5g6h7_rebuild_scheduling_system.py  c8d4e3f2a1b0_add_thumbnail_path.py  d1e2f3a4b5c6_add_ai_video_fields.py  d4e5f6g7h8i9_add_youtube_metadata.py  f19ac12d9af5_add_api_keys_table.py  f6c0d6f1328b_add_performance_indexes.py
app/: main.py
app/api/: error_handlers.py  schemas.py
app/core/: cache.py  celery_app.py  circuit_breaker.py  config.py  database.py  dlq.py  encryption.py  logging.py  metrics.py  redis_client.py  validation.py
app/middleware/: __init__.py  auth.py  security_headers.py
app/models/: __init__.py  analytics.py  (+4 more)
docs/: API.md  LOCAL_DEVELOPMENT.md  PRODUCTION_CHECKLIST.md  SCALING.md  SUBSCRIPTION_PLAN.md  TELEGRAM_GUIDE.md
monitoring/: README.md  alerting_rules.yml  alertmanager.yml  prometheus.yml
scripts/: README.md  encrypt_youtube_token.py  generate_secrets.py  manage_api_keys.py  manage_telegram_users.py  refresh_youtube_token.py  setup_db.bat  setup_db.sh  start_api.bat  start_api.sh  start_flower.bat  start_flower.sh  start_telegram_bot.bat  start_telegram_bot.sh  start_telegram_notifier.bat  start_telegram_notifier.sh  start_worker.bat  start_worker.sh  validate_config.bat  validate_config.sh  verify_project.py
tests/: README.md  __init__.py  conftest.py  generate_fixtures.py  utils.py
(+141 files in other folders)
