[project]
name = "youtube-shorts-automation"
version = "1.0.0"
description = "AI-Powered YouTube Shorts Generation via Telegram Bot"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | __pycache__
  | alembic
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Function call in default argument (FastAPI Depends/Query pattern)
    "B904",   # raise ... from err in except (Celery retry pattern)
    "B017",   # pytest.raises(Exception) is valid in tests
    "E712",   # == True comparison (required for SQLAlchemy filters)
    "SIM117", # Nested with statements (more readable for patch + pytest.raises)
    "N806",   # Variable name in function should be lowercase (SessionLocal convention)
    "B012",   # break inside finally (intentional single-iteration pattern)
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "alembic/"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
